--- a/Kurdish SRT Editor.html
+++ b/Kurdish SRT Editor.html
@@ -10,17 +10,17 @@
 
   <style>
     .author {
-  text-align: center;
-  font-size: 14px;
-  color: var(--muted);
-  margin-bottom: 12px;
-}
+      text-align: center;
+      font-size: 14px;
+      color: var(--muted);
+      margin-bottom: 12px;
+    }
 
     :root {
       --bg: #0d0f12;
       --card: #16181d;
       --border: #2a2d34;
-      --accent: #10a37f; /* ChatGPT green */
+      --accent: #10a37f;
       --text: #e6e6e6;
       --muted: #9aa0a6;
     }
@@ -128,9 +128,13 @@
       width: 100%;
       margin-top: 8px;
     }
-
   </style>
 </head>
+<body>
+
+<header>📄 Kurdish SRT Translator</header>
+<div class="author">Created by: Saad Kamaran</div>
+
 <!-- Add {\an8} button -->
 <button id="addAn8Btn" style="position: fixed; bottom: 150px; right: 20px; padding:6px 10px; border-radius:6px; border:none; background:var(--accent); color:#06281e; font-weight:600; z-index:1000;">
   Add {\an8}
@@ -142,7 +146,7 @@
   <button id="gotoLineBtn" style="padding:6px 10px; border-radius:6px; border:none; background:var(--accent); color:#06281e; font-weight:600;">Go</button>
 </div>
 
-<!-- Add this inside <body>, just before </body> -->
+<!-- Scroll down button -->
 <button id="scrollDownBtn" style="
   position: fixed;
   bottom: 20px;
@@ -157,10 +161,6 @@
   cursor: pointer;
   z-index: 1000;
 ">⬇️</button>
-<body>
-
-<header>📄 Kurdish SRT Translator</header>
-<div class="author">Created by: Saad Kamaran</div>
 
 <div class="container">
 
@@ -180,13 +180,14 @@
 </div>
 
 <script>
-  const scrollBtn = document.getElementById('scrollDownBtn');
+const scrollBtn = document.getElementById('scrollDownBtn');
 scrollBtn.addEventListener('click', () => {
   controls.scrollIntoView({ behavior: 'smooth', block: 'start' });
 });
 
 let subtitles = [];
 let currentFileKey = null;
+let originalFileName = '';
 
 const subsDiv = document.getElementById('subs');
 const fileInput = document.getElementById('fileInput');
@@ -198,7 +199,7 @@ loadSavedFiles();
 fileInput.addEventListener('change', e => {
   const file = e.target.files[0];
   if (!file) return;
-
+  originalFileName = file.name;
   const reader = new FileReader();
   reader.onload = () => loadSRT(file.name, reader.result);
   reader.readAsText(file);
@@ -239,6 +240,7 @@ function render() {
         </div>
         <div>
           <div class="label">Kurdish Translation</div>
+          <button class="translateBtn" style="margin-bottom:4px; padding:4px 6px; border:none; border-radius:6px; background:var(--accent); color:#06281e; font-weight:600;">Translate</button>
           <textarea dir="rtl">${s.edited}</textarea>
         </div>
       </div>
@@ -251,6 +253,26 @@ function render() {
     });
 
     subsDiv.appendChild(card);
+  });
+
+  // Attach translate button events after rendering
+  subsDiv.querySelectorAll('.translateBtn').forEach((btn, i) => {
+    btn.addEventListener('click', async () => {
+      const subtitle = subtitles[i];
+      const textToTranslate = subtitle.original;
+      if (!textToTranslate.trim()) return;
+
+      try {
+        const res = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=en&tl=ckb&dt=t&q=${encodeURIComponent(textToTranslate)}`);
+        const data = await res.json();
+        subtitle.edited = data[0].map(d => d[0]).join('');
+        const kurdTa = subsDiv.querySelectorAll('.subtitle')[i].querySelectorAll('textarea')[1];
+        kurdTa.value = subtitle.edited;
+        saveToStorage();
+      } catch (err) {
+        alert('Translation failed: ' + err);
+      }
+    });
   });
 }
 
@@ -267,18 +289,17 @@ function loadSavedFiles() {
       const container = document.createElement('div');
       container.style.cssText = 'display:flex;justify-content:space-between;margin-top:6px';
 
-      ['📂', '🗑️'].forEach((icon, i) => {
+      ['📂','🗑️'].forEach((icon, i) => {
         const btn = document.createElement('button');
         btn.className = 'secondary';
         btn.textContent = i === 0 ? key.replace('srt-', icon + ' ') : icon;
-        btn.onclick = () => i === 0 ? openSaved(key) : confirm('Delete this saved project?') && (localStorage.removeItem(key), loadSavedFiles(), currentFileKey===key&&clearCurrent());
+        btn.onclick = () => i === 0 ? openSaved(key) : confirm('Delete this saved project?') && (localStorage.removeItem(key), loadSavedFiles(), currentFileKey===key && clearCurrent());
         container.appendChild(btn);
       });
 
       savedFilesDiv.appendChild(container);
     });
 }
-
 
 function openSaved(key) {
   subtitles = JSON.parse(localStorage.getItem(key));
@@ -293,89 +314,71 @@ function clearCurrent() {
   currentFileKey = null;
 }
 
-let originalFileName = ''; // <-- add this at the top with subtitles & currentFileKey
-
-function loadSRT(name, text) {
-  originalFileName = name; // save original name
-  const blocks = text.trim().split(/\n\s*\n/);
-  subtitles = blocks.map(b => {
-    const lines = b.split('\n');
-    return {
-      index: lines[0],
-      time: lines[1],
-      original: lines.slice(2).join('\n'),
-      edited: ''
-    };
-  });
-
-  currentFileKey = 'srt-' + name;
-  saveToStorage();
-  render();
-  controls.style.display = 'flex';
-  loadSavedFiles();
-}
-
 function downloadSRT() {
   if (!currentFileKey) return alert('No file loaded!');
 
-  const content = subtitles
-    .map(s => `${s.index}\n${s.time}\n${s.edited || s.original}`)
-    .join('\n\n');
-
+  const content = subtitles.map(s => `${s.index}\n${s.time}\n${s.edited || s.original}`).join('\n\n');
   const blob = new Blob([content], { type: 'text/plain;charset=utf-8' });
   const a = document.createElement('a');
   a.href = URL.createObjectURL(blob);
 
-  // Use the saved project name (remove the "srt-" prefix)
   let name = currentFileKey.replace(/^srt-/, '');
-  
-  // Ensure it ends with .srt
-  if (!name.toLowerCase().endsWith('.srt')) {
-    name = name.replace(/\.\w+$/, '') + '.srt';
-  }
-
-  a.download = name; // now uses the project name
+  if (!name.toLowerCase().endsWith('.srt')) name = name.replace(/\.\w+$/, '') + '.srt';
+  a.download = name;
   a.click();
 }
 
 const gotoInput = document.getElementById('gotoLineInput');
 const gotoBtn = document.getElementById('gotoLineBtn');
-
 gotoBtn.addEventListener('click', () => {
   const line = parseInt(gotoInput.value);
   if (!line || line < 1 || line > subtitles.length) return alert('Invalid line number');
-
   const subtitleCards = subsDiv.querySelectorAll('.subtitle');
-  const target = subtitleCards[line - 1]; // arrays are 0-indexed
+  const target = subtitleCards[line-1];
   if (target) target.scrollIntoView({ behavior: 'smooth', block: 'center' });
 });
 
 const addAn8Btn = document.getElementById('addAn8Btn');
-
 addAn8Btn.addEventListener('click', () => {
   const subtitleCards = subsDiv.querySelectorAll('.subtitle');
   if (!subtitleCards.length) return alert('No subtitles loaded!');
-
-  // Find the first subtitle that is visible in the viewport
   let added = false;
-  subtitleCards.forEach((card, i) => {
+  subtitleCards.forEach((card,i) => {
     const rect = card.getBoundingClientRect();
-    if (!added && rect.top >= 0 && rect.bottom <= window.innerHeight) {
+    if (!added && rect.top >=0 && rect.bottom <= window.innerHeight) {
       const subtitle = subtitles[i];
-      const kurdTa = card.querySelectorAll('textarea')[1]; // Kurdish box
-
+      const kurdTa = card.querySelectorAll('textarea')[1];
       if (!subtitle.edited.includes('{\\an8}')) {
         subtitle.edited = '{\\an8} ' + subtitle.edited;
-        kurdTa.value = subtitle.edited; // update textarea
+        kurdTa.value = subtitle.edited;
         saveToStorage();
         added = true;
-
-        // Scroll to it
         card.scrollIntoView({ behavior: 'smooth', block: 'center' });
       }
     }
   });
+  // Move Add {\an8} button above keyboard on mobile
+const allTextareas = () => document.querySelectorAll('textarea');
 
+allTextareas().forEach(ta => {
+  ta.addEventListener('focus', () => {
+    addAn8Btn.style.bottom = '300px';
+  });
+  ta.addEventListener('blur', () => {
+    addAn8Btn.style.bottom = '150px';
+  });
+});
+// Handle dynamically rendered subtitles
+subsDiv.addEventListener('input', () => {
+  allTextareas().forEach(ta => {
+    ta.addEventListener('focus', () => {
+      addAn8Btn.style.bottom = '300px';
+    });
+    ta.addEventListener('blur', () => {
+      addAn8Btn.style.bottom = '150px';
+    });
+  });
+});
   if (!added) alert('No visible subtitle to add {\\an8} to.');
 });
 </script>
