--- a/Kurdish SRT Editor.html
+++ b/Kurdish SRT Editor.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SRT Kurdish Editor</title>
+  <title>SRT Editor</title>
     <!-- PWA Configuration for iOS Home Screen -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Kurdish SRT Editor">
+  <meta name="apple-mobile-web-app-title" content="SRT Editor">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
     <!-- iOS Home Screen Icons -->
