--- a/Kurdish SRT Editor.html
+++ b/Kurdish SRT Editor.html
@@ -10,6 +10,7 @@
   <meta name="apple-mobile-web-app-title" content="SRT Editor">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- iOS Home Screen Icons -->
   <link rel="apple-touch-icon" href="icons/icon-192.png">
   <link rel="apple-touch-icon" sizes="152x152" href="icons/icon-152.png">
