--- a/Kurdish SRT Editor.html
+++ b/Kurdish SRT Editor.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>SRT Editor</title>
-    <!-- PWA Configuration for iOS Home Screen -->
+  
+  <!-- PWA & iOS Home Screen Configuration -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="SRT Editor">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- iOS Home Screen Icons -->
+  <meta name="apple-mobile-web-app-orientations" content="portrait">
+  
+  <!-- iOS Home Screen Icons -->
   <link rel="apple-touch-icon" href="icons/icon-192.png">
   <link rel="apple-touch-icon" sizes="152x152" href="icons/icon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
   <link rel="apple-touch-icon" sizes="167x167" href="icons/icon-167.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
+  
+  <!-- Browser Tab Favicons (NEW - For Chrome/Firefox/Safari tabs) -->
+  <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
-  
-  <!-- iOS Splash Screen Meta Tags -->
-  <meta name="apple-mobile-web-app-orientations" content="portrait">
 
   <!-- Kurdish-friendly font -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;600&display=swap" rel="stylesheet">
