--- a/Kurdish SRT Editor.html
+++ b/Kurdish SRT Editor.html
@@ -32,6 +32,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
+  body {
+    background-color: #0a0b0e !important;
+    margin: 0;
+    padding: 0;
+  }
+</style>
+
+  <style>
     :root {
       --bg-dark: #0a0b0e;
       --bg-card: #111318;
