--- a/Kurdish SRT Editor.html
+++ b/Kurdish SRT Editor.html
@@ -28,6 +28,14 @@
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
 
+  <!-- Website Favicons -->
+<link rel="icon" type="image/png" sizes="32x32" href="web/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="web/favicon-16x16.png">
+<link rel="apple-touch-icon" href="web/apple-touch-icon.png">
+
+<!-- PWA Manifest -->
+<link rel="manifest" href="manifest.json">
+
   <!-- Kurdish-friendly font -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;600&display=swap" rel="stylesheet">
 
